samples/_failures_safe/1761090817_c7ede9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36dddaf8.c: In function ‘main’:
./samples/SAFE/__tmp_36dddaf8.c:158:20: error: missing terminating " character
  158 |             printf("Empty input\n
      |                    ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_36dddaf8.c:158:13: error: expected expression at end of input
  158 |             printf("Empty input\n
      |             ^~~~~~
./samples/SAFE/__tmp_36dddaf8.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_36dddaf8.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_36dddaf8.c:158:13: error: expected declaration or statement at end of input
